Add the option to delete the task, mark as done and corrections in operation and appearance

--- a/index.html
+++ b/index.html
@@ -14,16 +14,14 @@
 
             <div class="new-task">
                 <input name="newTask" class="input-task" type="text" placeholder="Co masz do zrobienia ?" />
-                <button id="newTaskBtn">Dodaj</button>
+                <button id="newTaskBtn" class="btn" title="Dodaj nowe zadanie"><i class="icon plus-icon"></i></button>
             </div>
 
         </header>
-        <section class="todos">
-            <div class="task">
-                Kupic chleb
-                <span class="task-date">Dodano: 2019-02-14</span>
-            </div>
+        <section class="hide no-task text-center">
+            <h2>Hurra ! <br /> Nie masz żadnych zadań do wykonania :)</h2>
         </section>
+        <section class="todos"></section>
     </div>
 
 <script src="script.js"></script>
